--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
         </div>
         
         <div class="gif-container">
-            <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExNzE5ZGE4ZjJkYzBmOGY0ZjM5ZjY4MzI5MzY2ZjE5ZjE5YjY5OWY4YiZlcD12MV9pbnRlcm5hbF9naWZzX2dpZklkJmN0PWc/l0HlNQ03J5JxX6lva/giphy.gif" alt="Animation" loading="lazy">
+            <img src="https://media.giphy.com/media/v1.Y2lkPWVjZjA1ZTQ3b3AxNzh6NWN2ZW5wYXI0NDRlaWFjYXU0Nmt4eXU5MjVlbzBhMHMxaCZlcD12MV9zdGlja2Vyc190cmVuZGluZyZjdD1z/10a1Cwco2kUtlS/giphy.gif" alt="Animation" loading="lazy">
         </div>
         
         <div class="input-group">
@@ -379,7 +379,7 @@
     </div>
 
     <script>
-        const SCRIPT_URL = 'YOUR_GOOGLE_APPS_SCRIPT_URL_HERE';
+        const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbzkTR2WxFtD_2fzh0ShBHVZxPe54fumm01NNEsIxOp-_cEjT6ztOgO8OsJgc92rHuMs/exec';
 
         const textInput = document.getElementById('textInput');
         const charCount = document.getElementById('charCount');
